# icao-emissions

./: .gitignore  README.md  pyproject.toml  setup.cfg
data/: __init__.py
data/icao_databank/: README.md  gaseous_certification.csv  gaseous_databank.csv  gaseous_emissions.csv
data/icao_databank/configs/: edb_v28c_gasesous_cleaning_header.yaml  engines.yaml  icao_release_dates.yaml  remove_engines.yaml
data/icao_databank/configs/engines/: build_engines_conifg.py  cfm_leap1a_2017.yaml  cfm_leap1a_2019.yaml  cfm_leap1b_2017.yaml  cfm_leap1b_2019.yaml  engines.yaml  pw_pw1100g_blockA.yaml  pw_pw1100g_blockC.yaml  pw_pw1100g_blockD.yaml  rolls_royce_trent1000_pack_b_2012.yaml  (+6 more)
data/icao_databank/raw/: README.md  edb-emissions-databank_v28c_web.sha  edb-emissions-databank_v28c_web.xlsx
data/icao_databank/scripts/: _plot.py  main.py
data/verification/: generate_hash_keys.py  hash_config.yaml  hash_keys.yaml
src/icao_emissions/databank/: README.md  __init__.py  readers.py
src/icao_emissions/exceptions/: clean_databanks.py  data_resources.py  handler.py  hashing.py  icao_databank.py  readers_databank.py
src/icao_emissions/utils/: __init__.py  _engine_classification.py  _test.py  clean_icao_databanks.py  hashing.py  resources.py
tests/: conftest.py  test_data_resources.py  test_databank_cleaning.py  test_hashing_util.py  test_icao_emissions.py
tests/functional/: test_hashing_resources.py  test_validate_resources.py
tests/unit/: test_cleaning_icao_databank.py  test_data_resources.py  test_databank_readers.py  test_hashing_util.py
(+62 files in other folders)
