[tool.poetry]
name = "icao_emissions"
version = "0.1.0"
description = ""
authors = ["Haris Musaefendic <haris.musaefendic@gmail.com>"]
packages = [
    { include = "icao_emissions", from="src"},
    { include = "data" },
]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.4.0"
openpyxl = "^3.0.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
rope = "^0.22.0"
flake8 = "^4.0.1"
wemake-python-styleguide = "^0.16.0"
cohesion = "^1.0.0"
dlint = "^0.12.0"
black = "^22.1.0"
mypy = "^0.931"
pytest-cov = "^3.0.0"
setuptools = "^60.8.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
